--- a/template/src/less/themes/light/base.less
+++ b/template/src/less/themes/light/base.less
@@ -166,7 +166,7 @@ footer.under-construction {
 }
 
 
-hr { border: solid #ececec; border-width: 1px 0 0; clear: both; margin: -1px 0 0 0; height: 0; }
+hr { border: solid #ececec; border-width: 1px 0 0; clear: both; margin: -3px 0 0 0; height: 0; }
 
 hr.bottom { border: solid #747474; border-width: 1px 0 0; clear: both; margin: 15px 0 !important; height: 0; }
 
