--- a/template/src/less/themes/light/style.less
+++ b/template/src/less/themes/light/style.less
@@ -715,7 +715,7 @@ input.subscribe-button {
 
 .navigation ul li a {
 display: block;
-padding: 37px 10px 34px 10px;
+padding: 37px 10px 35px 10px;
 }
 
 .form {
